--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     gtag('js', new Date());
     gtag('config', 'G-BXV1N2PMC4');
     </script>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Assistir friends!!</title>
+    <title>Assistir séries</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
