--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     gtag('config', 'G-BXV1N2PMC4');
     </script>
     <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
